<resources>
    <string name="app_name">RideOn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Your Dream Wheels</string>
    <string name="nav_header_subtitle">shobbyduncan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">profile</string>
    <string name="categoryBrands">category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offers">offers</string>
    <string name="new_products">new_products</string>
    <string name="my_carts">my_carts</string>
    <string name="my_orders">my_orders</string>
    <string name="category">category</string>
    <string name="description">Description</string>
    <string name="my_cart">my_cart</string>
    <string name="newwheels_services">NewWheels/Services</string>
    <string name="log_out">log_out</string>
</resources>